--- a/fe_intro.tex
+++ b/fe_intro.tex
@@ -5,7 +5,7 @@
 \graphicspath{{Images/}}
 \mode<presentation>
 \title{Introduction to the Finite Element Method}
-\institute{Corvid Technologies}
+\institute{NONE}
 \date{2017-05-16}
 
 \begin{document}
