had an error in cons of mass equation, shrank graphic

--- a/fe_intro.tex
+++ b/fe_intro.tex
@@ -45,7 +45,7 @@
 	\end{itemize}		
 \end{block}
 \begin{figure}[!ht]
-	\includegraphics[scale=0.5]{LE2}
+	\includegraphics[scale=0.4]{LE2}
 	\caption{Blatantly stolen from the internet}
 	\label{fig:LE}
 \end{figure}
@@ -112,7 +112,7 @@ The detailed derivation of this can be found in Belytschko, \textbf{Section 3.5.
 \begin{block}{Eularian}
 	Eularian conservation of mass is given by:
 	\begin{equation}
-		\frac{\partial \rho(\bm{x},t)}{\partial t}+\nabla\cdot[\rho(\bm{x},t)\bm{v}						(\bm{x},t)]
+		\frac{\partial \rho(\bm{x},t)}{\partial t}+\nabla\cdot[\rho(\bm{x},t)\bm{v}						(\bm{x},t)]=0
 	\end{equation}
 \end{block}
 \end{frame}
